Finished UI changes for Intake, Details and Housing pages

--- a/Odin/Content/css/transferee/intake.scss
+++ b/Odin/Content/css/transferee/intake.scss
@@ -10,9 +10,7 @@ div[data-notify].alert-danger {
 
 
 div#intake {
-    padding-top: 30px;
-    padding-left: 25px;
-    margin-left: 20px;    
+
 
     div.row {
         text-align: left;
@@ -52,11 +50,14 @@ div#intake {
 
             .intake-collapse {
                 cursor: pointer;
-            }
+                display: inline;
 
-            h5 {
-                margin-top: 0px;
-                font-size: 22px
+                img {
+                    margin-bottom:3px;
+                    margin-right:8px;
+                    height:1.6rem;
+                    width: 1.5rem;
+                }
             }
 
             .intake-edit, .intake-save {
@@ -81,18 +82,16 @@ div#intake {
         .intake-row {
 
             .intake-col {
-                padding-top:10px;
+                padding-top: 10px;
                 min-height: 70px;
 
                 label {
                     display: block;
-                    font-size: 20px;
-                    margin-bottom: -5px;
                 }
 
                 .intake-span {
                     color: $DW_Blue;
-                    font-size: 16px;
+                    font-size: 1.6rem;
                 }
 
                 .intake-add {
