--- a/Odin/Views/Orders/Partials/_Details.cshtml
+++ b/Odin/Views/Orders/Partials/_Details.cshtml
@@ -104,7 +104,7 @@
         </h1>
         <p class="sectionInstruction">Please fill out any items that are not already auto-generated that could aid in the help of your clients placement.</p>
 
-        <ul class="row sectionList">
+        <ul class="row sectionList" id="scheduledServices">
             <li class="col-xs-12 col-sm-2">
                 <h2 class="sectionSubHead">Service:</h2>
             </li>
