--- a/Odin/Views/Orders/Partials/_Housing.cshtml
+++ b/Odin/Views/Orders/Partials/_Housing.cshtml
@@ -301,6 +301,11 @@
 </div>
 
 @Styles.Render("~/Styling/housing")
+<script>
+    $(document).ready(function () {
+        TransfereeHousingController.init();
+    });
+</script>
 
 @*<script>
     var $lastFilter;
