--- a/Odin/Views/Orders/Transferee.cshtml
+++ b/Odin/Views/Orders/Transferee.cshtml
@@ -59,6 +59,7 @@
                 OrdersPageController.TransfereeInit();
                 TransfereeIntakeController.init();
                 TransfereeDetailsController.init();
+                TransfereeHousingController.init();
             });
     </script>
 }
