--- a/Odin/Content/css/transferee/housing.css
+++ b/Odin/Content/css/transferee/housing.css
@@ -69,15 +69,19 @@
 .propertyItem {
   margin: 0 0 0 0;
   padding: 0 0 0 0; }
-  .propertyItem div {
-    text-align: center; }
-    .propertyItem div p {
-      color: #858585;
-      text-align: center;
-      line-height: 1.5rem; }
-    .propertyItem div img {
-      width: 5rem;
-      margin: 0 auto; }
+  .propertyItem > div p {
+    color: #858585;
+    text-align: center;
+    line-height: 1.5rem; }
+  .propertyItem > div .input-group.date, .propertyItem > div .input-group.time {
+    margin: 0 auto;
+    width: auto; }
+    .propertyItem > div .input-group.date > input.form-control, .propertyItem > div .input-group.time > input.form-control {
+      text-align: center; }
+  .propertyItem > div img {
+    display: block;
+    width: 5rem;
+    margin: 0 auto; }
   .propertyItem .like img, .propertyItem .comments img {
     width: 3rem; }
   .propertyItem .comments {
