--- a/Odin/Content/css/transferee/housing.scss
+++ b/Odin/Content/css/transferee/housing.scss
@@ -99,8 +99,7 @@
     margin: 0 0 0 0;
     padding: 0 0 0 0;
 
-    div {
-        text-align: center;
+    > div {
 
         p {
             color: #858585;
@@ -108,22 +107,32 @@
             line-height: 1.5rem;
         }
 
+        .input-group.date, .input-group.time {
+            margin: 0 auto;
+            width: auto;
+
+            > input.form-control {
+                text-align: center;
+            }
+        }
+
         img {
+            display: block;
             width: 5rem;
             margin: 0 auto;
         }
     }
 
-    .like, .comments{
-        img{
+    .like, .comments {
+        img {
             width: 3rem;
         }
     }
 
-    .comments{
+    .comments {
         position: relative;
 
-        span{
+        span {
             position: absolute;
             top: 0;
             left: 50%;
