--- a/Odin/Content/css/transferee/transferee.scss
+++ b/Odin/Content/css/transferee/transferee.scss
@@ -74,6 +74,14 @@ nav#transfereeSideNav {
 }
 
 
+.input-group.date, .input-group.time{
+    /*margin: 0 auto;*/
+
+    /*> input.form-control{
+        text-align: center;
+    }*/
+}
+
 .sectionTitle {
     padding-bottom: 0px;
     margin: 2rem 0 0 0;
@@ -86,6 +94,7 @@ nav#transfereeSideNav {
     font-size: 1.725rem;
     font-weight: 400;
     color: #8e1a55;
+    display:inline-block;
 }
 
 .sectionSave {
